solve double-scrolling problem on mobile portrait

--- a/src/main/resources/styles.css
+++ b/src/main/resources/styles.css
@@ -18,6 +18,7 @@ html {
     --color-text-highlight: var(--color-accent);
 
     --sidebar-width: 43.5rem;
+    --topbar-height: 3rem;
     --color-bg-primary-action: var(--color-text-highlight);
 }
 
@@ -63,11 +64,13 @@ html, body {
     flex-shrink: 0;
     border-bottom: 0.1rem solid var(--color-text);
     display: none;
+    height: var(--topbar-height);
+    padding-left: .75rem;
 }
 
 .sidebar {
-    height: calc(100vh - 1rem);
-    height: calc(100lvh - 1rem);
+    height: calc(100vh - 10rem);
+    height: calc(100lvh - 10rem);
     width: var(--sidebar-width);
     max-width: 100vw;
     box-sizing: content-box;
@@ -408,6 +411,12 @@ select {
     .topbar {
         display: block;
     }
+
+    .simulation-config {
+        height: calc(100vh - var(--topbar-height) - 0.1rem);
+        height: calc(100lvh - var(--topbar-height) - 0.1rem);
+    }
+
     .container-xxl-fluid {
         margin-left: 0.5rem;
         width: 100%;
